# PerfectNumbers

./: CMakeLists.txt  PerfectNumber.cpp  README.md  main.cpp
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  PerfectNumber.cpp  PerfectNumber.h
test/: CMakeLists.txt  test_PerfectNumber.cpp
